--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,12 @@
     <div class="flex flex-col mt-[40px] justify-center items-center gap-[15px] sm:flex-row sm:justify-between sm:mt-[60px]">
         <p class="text-[30px] dark:text-white font-bold">Extensions List</p>
         <div class="flex flex-row justify-center items-center gap-[10px]">
-            <div class="py-[8px] px-[18px] rounded-[20px] text-[18px] bg-white dark:bg-dneu7 border-[1px] border-lneu5 dark:border-dneu6 text-black dark:text-white
-             hover:bg-red-500 hover:text-black dark:hover:bg-red-500 dark:hover:text-black transition-all duration-[0.2s] cursor-pointer shadow-sm">All</div>
-            <div class="py-[8px] px-[18px] rounded-[20px] text-[18px] bg-white dark:bg-dneu7 border-[1px] border-lneu5 dark:border-dneu6 text-black dark:text-white
-             hover:bg-red-500 hover:text-black dark:hover:bg-red-500 dark:hover:text-black transition-all duration-[0.2s] cursor-pointer shadow-sm">Active</div>
-            <div class="py-[8px] px-[18px] rounded-[20px] text-[18px] bg-white dark:bg-dneu7 border-[1px] border-lneu5 dark:border-dneu6 text-black dark:text-white
-             hover:bg-red-500 hover:text-black dark:hover:bg-red-500 dark:hover:text-black transition-all duration-[0.2s] cursor-pointer shadow-sm">Inactive</div>
+            <div class="btn-gen py-[8px] px-[18px] rounded-[20px] text-[18px] bg-white dark:bg-dneu7 border-[1px] border-lneu5 dark:border-dneu6 text-black dark:text-white
+             hover:bg-red-400 hover:text-black dark:hover:bg-red-400 dark:hover:text-black transition-all duration-[0.2s] cursor-pointer shadow-sm">All</div>
+            <div class="btn-gen py-[8px] px-[18px] rounded-[20px] text-[18px] bg-white dark:bg-dneu7 border-[1px] border-lneu5 dark:border-dneu6 text-black dark:text-white
+             hover:bg-red-400 hover:text-black dark:hover:bg-red-400 dark:hover:text-black transition-all duration-[0.2s] cursor-pointer shadow-sm">Active</div>
+            <div class="btn-gen py-[8px] px-[18px] rounded-[20px] text-[18px] bg-white dark:bg-dneu7 border-[1px] border-lneu5 dark:border-dneu6 text-black dark:text-white
+             hover:bg-red-400 hover:text-black dark:hover:bg-red-400 dark:hover:text-black transition-all duration-[0.2s] cursor-pointer shadow-sm">Inactive</div>
         </div>
     </div>
 
