--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 <div class="hp:flex hp:flex-row hp:justify-center">
 <div class="w-full min-h-screen p-4 hp:w-[1200px]">
 
-    <div class="w-[100%] p-[10px] flex flex-row justify-between items-center shadow-md bg-white dark:bg-dneu8 rounded-[18px] sm:px-[15px] hp:mt-[20px]">
+    <a href="index.html"><div class="w-[100%] p-[10px] flex flex-row justify-between items-center shadow-md bg-white dark:bg-dneu8 rounded-[18px] sm:px-[15px] hp:mt-[20px]">
         <div class="flex flex-row gap-[5px] justify-center items-center">
             <img src="/src/assets/images/logo.svg">
-        </div>
+        </div></a>
 
         <div id="mode" class="dark:bg-dneu7 bg-lneu4 rounded-[10px] p-[15px] flex flex-row justify-center items-center cursor-pointer hover:opacity-[0.7] transition-all
         duration-[0.2s]">
