--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="../src/styles/output.css">
+    <link rel="stylesheet" href="styles/output.css">
     <title>Extensions</title>
-    <script src="../src/js/index.js" defer></script>
+    <script src="js/index.js" defer></script>
 </head>
 <body>
 <div class="hp:flex hp:flex-row hp:justify-center">
@@ -13,12 +13,12 @@
 
     <a href="index.html"><div class="w-[100%] p-[10px] flex flex-row justify-between items-center shadow-md bg-white dark:bg-dneu8 rounded-[18px] sm:px-[15px] hp:mt-[20px]">
         <div class="flex flex-row gap-[5px] justify-center items-center">
-            <img src="/src/assets/images/logo.svg">
+            <img src="images/logo.svg">
         </div></a>
 
         <div id="mode" class="dark:bg-dneu7 bg-lneu4 rounded-[10px] p-[15px] flex flex-row justify-center items-center cursor-pointer hover:opacity-[0.7] transition-all
         duration-[0.2s]">
-            <img id="dl-img" src="/src/assets/images/icon-moon.svg">
+            <img id="dl-img" src="images/icon-moon.svg">
         </div>
     </div>
 
