--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="hp:flex hp:flex-row hp:justify-center">
 <div class="w-full min-h-screen p-4 hp:w-[1200px]">
 
-    <a href="Extensions-list/"><div class="w-[100%] p-[10px] flex flex-row justify-between items-center shadow-md bg-white dark:bg-dneu8 rounded-[18px] sm:px-[15px] hp:mt-[20px]">
+    <a href="index.html"><div class="w-[100%] p-[10px] flex flex-row justify-between items-center shadow-md bg-white dark:bg-dneu8 rounded-[18px] sm:px-[15px] hp:mt-[20px]">
         <div class="flex flex-row gap-[5px] justify-center items-center">
             <img src="images/logo.svg">
         </div></a>
