--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" href="images/Screenshot 2025-07-27 205726.png">
     <link rel="stylesheet" href="styles/output.css">
     <title>Extensions</title>
     <script src="js/index.js" defer></script>
